Bug fixes (omero2): ------------------ * Got JDK5 code out of the client * Removed password field from Experimenter * Rearranged exception handling (not yet functional) * Fixed various dependency issues (oscache/mysql) * Fixed eclipse projects for new version
MISC:
----
* Added proto exception hierarcy



git-svn-id: file:///home/svn/omero/branches/omero2/OME_2_5@220 05709c45-44f0-0310-885b-81a1db45b4a6